--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:01:02.621Z",
-        "lastAccessed": "2025-07-06T17:01:02.622Z"
+        "creation": "2025-07-06T17:19:08.216Z",
+        "lastAccessed": "2025-07-06T17:19:08.220Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:01:02.622Z",
-        "lastAccessed": "2025-07-06T17:01:02.622Z"
+        "creation": "2025-07-06T17:19:08.220Z",
+        "lastAccessed": "2025-07-06T17:19:08.220Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:01:02.622Z",
-        "lastAccessed": "2025-07-06T17:01:02.622Z"
+        "creation": "2025-07-06T17:19:08.220Z",
+        "lastAccessed": "2025-07-06T17:19:08.220Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:01:02.622Z",
-        "lastAccessed": "2025-07-06T17:01:02.622Z"
+        "creation": "2025-07-06T17:19:08.220Z",
+        "lastAccessed": "2025-07-06T17:19:08.220Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:01:02.622Z",
-        "lastAccessed": "2025-07-06T17:01:02.622Z"
+        "creation": "2025-07-06T17:19:08.220Z",
+        "lastAccessed": "2025-07-06T17:19:08.220Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:01:02.622Z",
-        "lastAccessed": "2025-07-06T17:01:02.622Z"
+        "creation": "2025-07-06T17:19:08.220Z",
+        "lastAccessed": "2025-07-06T17:19:08.220Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:01:02.622Z",
-        "lastAccessed": "2025-07-06T17:01:02.622Z"
+        "creation": "2025-07-06T17:19:08.220Z",
+        "lastAccessed": "2025-07-06T17:19:08.220Z"
     },
     {
         "key": "pas",
@@ -68,35 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:01:02.622Z",
-        "lastAccessed": "2025-07-06T17:01:02.622Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61577382866691",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-06T17:01:02.622Z",
-        "lastAccessed": "2025-07-06T17:01:02.622Z"
-    },
-    {
-        "key": "xs",
-        "value": "48%3AjysTugD93QmhSA%3A2%3A1751818008%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-06T17:01:02.622Z",
-        "lastAccessed": "2025-07-06T17:01:02.622Z"
-    },
-    {
-        "key": "fr",
-        "value": "0s6UsKq9s0AXgaSBp.AWcQcgp5nO_gFa_Wd2hAJhxRGqf5G3Ejm1949RanjfmuzxWcQgM.Boap8a..AAA.0.0.BoaqvL.AWeOaOOLQrUJ0iAeaf1Us7b9NLs",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-06T17:01:02.622Z",
-        "lastAccessed": "2025-07-06T17:01:02.622Z"
+        "creation": "2025-07-06T17:19:08.220Z",
+        "lastAccessed": "2025-07-06T17:19:08.220Z"
     },
     {
         "key": "wl_cbv",
@@ -104,16 +77,16 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:01:02.622Z",
-        "lastAccessed": "2025-07-06T17:01:02.622Z"
+        "creation": "2025-07-06T17:19:08.220Z",
+        "lastAccessed": "2025-07-06T17:19:08.220Z"
     },
     {
-        "key": "fbl_st",
-        "value": "100738237%3BT%3A29197021",
+        "key": "fr",
+        "value": "0s6UsKq9s0AXgaSBp.AWftqMbQ2lRKMA-U_oOV_giLzJoCPVXQuiwa0knQHdxKxVVYdhY.Boap8a..AAA.0.0.BoarAK.AWeQTrqwXcq5A1OGUqY_qB2ygVU",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:01:02.622Z",
-        "lastAccessed": "2025-07-06T17:01:02.622Z"
+        "creation": "2025-07-06T17:19:08.220Z",
+        "lastAccessed": "2025-07-06T17:19:08.220Z"
     }
 ]
