--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261568068416080%22%3A%22sYbEGhu6%22%2C%2261571471747649%22%3A%22ck8UV3Nh%22%2C%2261570967284501%22%3A%22ecQkn1Ft%22%2C%22100078299405598%22%3A%227nBKT7Qq%22%2C%2261572003177039%22%3A%22Pjy42bLK%22%2C%2261577382866691%22%3A%220fQr2plg%22%7D",
+        "value": "%7B%2261568068416080%22%3A%22sYbEGhu6%22%2C%2261571471747649%22%3A%22ck8UV3Nh%22%2C%2261570967284501%22%3A%22ecQkn1Ft%22%2C%22100078299405598%22%3A%227nBKT7Qq%22%2C%2261572003177039%22%3A%22Pjy42bLK%22%2C%2261577382866691%22%3A%22y7zDMSNW%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:19:08.216Z",
-        "lastAccessed": "2025-07-06T17:19:08.220Z"
+        "creation": "2025-07-06T17:22:50.411Z",
+        "lastAccessed": "2025-07-06T17:22:50.412Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:19:08.220Z",
-        "lastAccessed": "2025-07-06T17:19:08.220Z"
+        "creation": "2025-07-06T17:22:50.412Z",
+        "lastAccessed": "2025-07-06T17:22:50.412Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:19:08.220Z",
-        "lastAccessed": "2025-07-06T17:19:08.220Z"
+        "creation": "2025-07-06T17:22:50.412Z",
+        "lastAccessed": "2025-07-06T17:22:50.412Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:19:08.220Z",
-        "lastAccessed": "2025-07-06T17:19:08.220Z"
+        "creation": "2025-07-06T17:22:50.412Z",
+        "lastAccessed": "2025-07-06T17:22:50.412Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:19:08.220Z",
-        "lastAccessed": "2025-07-06T17:19:08.220Z"
+        "creation": "2025-07-06T17:22:50.412Z",
+        "lastAccessed": "2025-07-06T17:22:50.412Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:19:08.220Z",
-        "lastAccessed": "2025-07-06T17:19:08.220Z"
+        "creation": "2025-07-06T17:22:50.412Z",
+        "lastAccessed": "2025-07-06T17:22:50.412Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:19:08.220Z",
-        "lastAccessed": "2025-07-06T17:19:08.220Z"
+        "creation": "2025-07-06T17:22:50.412Z",
+        "lastAccessed": "2025-07-06T17:22:50.412Z"
     },
     {
         "key": "pas",
@@ -68,25 +68,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:19:08.220Z",
-        "lastAccessed": "2025-07-06T17:19:08.220Z"
+        "creation": "2025-07-06T17:22:50.412Z",
+        "lastAccessed": "2025-07-06T17:22:50.412Z"
     },
     {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2861%3Btimestamp%3A1751821259",
+        "key": "m_pixel_ratio",
+        "value": "2",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:19:08.220Z",
-        "lastAccessed": "2025-07-06T17:19:08.220Z"
+        "creation": "2025-07-06T17:22:50.412Z",
+        "lastAccessed": "2025-07-06T17:22:50.412Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x800",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-06T17:22:50.412Z",
+        "lastAccessed": "2025-07-06T17:22:50.412Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61577382866691",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-06T17:22:50.412Z",
+        "lastAccessed": "2025-07-06T17:22:50.412Z"
+    },
+    {
+        "key": "xs",
+        "value": "20%3Ao7QBJkGmTsIQoQ%3A2%3A1751822559%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-06T17:22:50.412Z",
+        "lastAccessed": "2025-07-06T17:22:50.412Z"
     },
     {
         "key": "fr",
-        "value": "0s6UsKq9s0AXgaSBp.AWftqMbQ2lRKMA-U_oOV_giLzJoCPVXQuiwa0knQHdxKxVVYdhY.Boap8a..AAA.0.0.BoarAK.AWeQTrqwXcq5A1OGUqY_qB2ygVU",
+        "value": "0s6UsKq9s0AXgaSBp.AWc8Lc0nWawcyyeU2TDn7fRkb_uWzKM3k-YY9afClliZDtSo278.Boap8a..AAA.0.0.BoarDm.AWc_6CwBq2oM0tx-qgEuMsQF2VA",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-06T17:19:08.220Z",
-        "lastAccessed": "2025-07-06T17:19:08.220Z"
+        "creation": "2025-07-06T17:22:50.412Z",
+        "lastAccessed": "2025-07-06T17:22:50.412Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100622475%3BT%3A29197042",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-06T17:22:50.412Z",
+        "lastAccessed": "2025-07-06T17:22:50.412Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2861%3Btimestamp%3A1751822566",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-06T17:22:50.412Z",
+        "lastAccessed": "2025-07-06T17:22:50.412Z"
     }
 ]
